[gd_scene load_steps=30 format=2]

[ext_resource path="res://Textures/Player/Jeremy/Pink/Down1.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Textures/Player/Jeremy/Pink/Left3.png" type="Texture" id=3]
[ext_resource path="res://Textures/Player/Jeremy/Pink/Down2.png" type="Texture" id=4]
[ext_resource path="res://Textures/Player/Jeremy/Pink/Left2.png" type="Texture" id=5]
[ext_resource path="res://Textures/Player/Jeremy/Pink/Up1.png" type="Texture" id=6]
[ext_resource path="res://Textures/Player/Jeremy/Pink/Right3.png" type="Texture" id=7]
[ext_resource path="res://Textures/Player/Jeremy/Pink/Left1.png" type="Texture" id=8]
[ext_resource path="res://Textures/Player/Jeremy/Pink/Up3.png" type="Texture" id=9]
[ext_resource path="res://Textures/Player/Jeremy/Pink/Right1.png" type="Texture" id=10]
[ext_resource path="res://Textures/Player/Jeremy/Pink/Right2.png" type="Texture" id=11]
[ext_resource path="res://Textures/Player/Jeremy/Pink/Up2.png" type="Texture" id=12]
[ext_resource path="res://Textures/Player/Jeremy/Pink/Down3.png" type="Texture" id=13]
[ext_resource path="res://Textures/Player/Jeremy/Pink/DownStrike2.png" type="Texture" id=14]
[ext_resource path="res://Textures/Player/Jeremy/Pink/DownStrike3.png" type="Texture" id=15]
[ext_resource path="res://Textures/Player/Jeremy/Pink/RightStrike2.png" type="Texture" id=16]
[ext_resource path="res://Textures/Player/Jeremy/Pink/LeftStrike1.png" type="Texture" id=17]
[ext_resource path="res://Textures/Player/Jeremy/Pink/RightStrike3.png" type="Texture" id=18]
[ext_resource path="res://Textures/Player/Jeremy/Pink/UpStrike3.png" type="Texture" id=19]
[ext_resource path="res://Textures/Player/Jeremy/Pink/RightStrike1.png" type="Texture" id=20]
[ext_resource path="res://Textures/Player/Jeremy/Pink/LeftStrike3.png" type="Texture" id=21]
[ext_resource path="res://Textures/Player/Jeremy/Pink/LeftStrike2.png" type="Texture" id=22]
[ext_resource path="res://Textures/Player/Jeremy/Pink/DownStrike1.png" type="Texture" id=23]
[ext_resource path="res://Textures/Player/Jeremy/Pink/UpStrike2.png" type="Texture" id=24]
[ext_resource path="res://Textures/Player/Jeremy/Pink/UpStrike1.png" type="Texture" id=25]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "left",
"speed": 6.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 7 ) ],
"loop": true,
"name": "right",
"speed": 6.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 12 ), ExtResource( 9 ) ],
"loop": true,
"name": "up",
"speed": 6.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 13 ) ],
"loop": true,
"name": "down",
"speed": 6.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": false,
"name": "attack_down",
"speed": 6.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 16 ), ExtResource( 18 ) ],
"loop": false,
"name": "attack_right",
"speed": 6.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 24 ), ExtResource( 19 ) ],
"loop": false,
"name": "attack_up",
"speed": 6.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 22 ), ExtResource( 21 ) ],
"loop": false,
"name": "attack_left",
"speed": 6.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.02747
height = 0.0

[sub_resource type="Animation" id=3]
resource_name = "attack_right"
length = 0.3

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10.9165, 2.83809 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 14
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.148651, 2.67572 )
frames = SubResource( 1 )
animation = "down"
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.148651, 12.1386 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack_right = SubResource( 3 )

[node name="Position" type="Position2D" parent="."]
position = Vector2( 0, 5 )
rotation = 4.71239

[node name="AttackPivot" type="Area2D" parent="."]
position = Vector2( 0, 5 )
collision_layer = 0
collision_mask = 8

[node name="WeaponHitbox" type="CollisionShape2D" parent="AttackPivot"]
position = Vector2( 3.09757, 7.62382 )
shape = SubResource( 4 )

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="InteractionBox" type="CollisionShape2D" parent="InteractArea"]
position = Vector2( 3.09757, 12.6238 )
shape = SubResource( 4 )
[connection signal="area_entered" from="InteractArea" to="." method="_on_InteractArea_area_entered"]
